[package]
name = "nft_marketplace"
version = "0.1.0"
authors = ["cocaman.near","cristian-zambrano.near"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
near-contract-standards={path ="../near-contract-standards-3.2.0"}
more-asserts="0.2.1"
[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[workspace]
members = []
